--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT(russell-formal-math, 0.9.2, vlasov@academ.org)
+AC_INIT(russell-formal-math, 0.9.3, vlasov@academ.org)
 AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE
@@ -12,6 +12,8 @@ AC_PROG_CXX
 AC_PROG_CC
 
 # Checks for libraries.
+AC_PROG_LIBTOOL
+AC_SUBST(LIBTOOL_DEPS)
 
 # Checks for header files.
 #AC_CHECK_HEADERS([stddef.h stdint.h sys/time.h unistd.h])
@@ -24,14 +26,31 @@ AC_TYPE_SIZE_T
 AC_TYPE_UINT32_T
 AC_CHECK_TYPES([ptrdiff_t])
 
-# Checks for library functions.
-# AC_CHECK_FUNCS([gettimeofday])
+LT_INIT
+
+#m4_include([m4/ax_check_compile_flag.m4])
+AX_CHECK_COMPILE_FLAG([-std=gnu++14], [CXXFLAGS="$CXXFLAGS -std=gnu++14"])
+
+AM_INIT_AUTOMAKE([subdir-objects])
+
+AC_CONFIG_MACRO_DIR([m4])
+
+AX_BOOST_BASE([1.48], AC_MSG_ERROR([libfoo needs Boost, but it was not found in your system]))
+AX_BOOST_SYSTEM
+AX_BOOST_FILESYSTEM
+AX_BOOST_PROGRAM_OPTIONS
+
+AX_PTHREAD
 
 AC_CONFIG_FILES([
 	Makefile
+	include/Makefile
+	peglib/Makefile
+	src/Makefile
 	src/mm/Makefile
-	src/rus/Makefile
 	src/smm/Makefile
+	src/rus/Makefile
+	src/metamath/Makefile
 ])
 
 AC_OUTPUT
