--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,8 @@
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = bootstrap
+EXTRA_DIST = \
+	bootstrap \
+	translate \
+	translate_deep
 
 SUBDIRS = \
 	peglib \
