metamath moved from src directory

--- a/Makefile.in
+++ b/Makefile.in
@@ -342,11 +342,16 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = bootstrap
+EXTRA_DIST = \
+	bootstrap \
+	translate \
+	translate_deep
+
 SUBDIRS = \
 	peglib \
 	include \
-	src
+	src \
+	metamath
 
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
