--- a/configure.ac
+++ b/configure.ac
@@ -50,7 +50,7 @@ AC_CONFIG_FILES([
 	src/mm/Makefile
 	src/smm/Makefile
 	src/rus/Makefile
-	src/metamath/Makefile
+	metamath/Makefile
 ])
 
 AC_OUTPUT
