--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -319,7 +319,8 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = \
-	mm \
+	com \
+	mm  \
 	smm \
 	rus
 
